objects/FundingAwardRequirement.object
<CustomObject>
    <fields>
        <fullName>Accomplishments_and__c</fullName>
        <label>Accomplishments and Outcomes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Concerns_Challenges_or_Issues__c</fullName>
        <label>Concerns, Challenges, or Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Progress__c</fullName>
        <label>Data Collection Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Explain_Spending_Issues__c</fullName>
        <label>Explain Spending Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoTargetRisks__c</fullName>
        <label>Explain risks and reasoning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Beneficiaries__c</fullName>
        <label>Number of Beneficiaries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Target_Population_Served__c</fullName>
        <label>Number of Target Population Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_track_with_spending__c</fullName>
        <label>On track with spending?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetOnTrack__c</fullName>
        <label>Are you on track to meet your targets?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Current_Period_Expenditure__c</fullName>
        <label>Total Current Period Expenditure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>